crates/tuna/tests/parser/fail/self-local.som
"test:
fail-message:
  - contains: define
  - contains: self
"

SelfLocal = (
  test = (
    |self|

    'you shant pass'
  )
)
